[package]
name = "markov-telegram-bot-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
log = { version = "0.4.14", features = ["max_level_trace"] }
env_logger = "0.9.0"
clap = "2.33.3"
frankenstein = { version = "0.10.0", default_features = false, features = ["async-http-client"] }
futures = "0.3.5"
tokio = { version = "1.16.0", features = ["full"] }
mongodb = "2.1.0"
serde = "1.0.126"
rand = "0.8.4"
lazy_static = "1.4.0"
substring = "1.4.5"
